Fix some layout issues with font color pane.

--- a/src/styles/_Footer.scss
+++ b/src/styles/_Footer.scss
@@ -1,94 +1,8 @@
 footer.footer {
   // @include debugger();
-  height: 4.25rem;
+  height: 4rem;
   margin: unset;
-  padding: 0 0.25rem 0.25rem;
-
-  [class*='col'] {
-    display: flex;
-    padding: 0 0.25rem 0.25rem !important;
-    justify-content: flex-end;
-    align-items: center;
-  }
-
-  .tool-bar__button {
-    min-height: 2.75rem;
-    min-width: 2.75rem;
-    color: $theme-primary-v5;
-
-    &:hover,
-    &:focus {
-      background-color: rgba($prim-r, $prim-g, $prim-b, 0.1);
-    }
-  }
-}
-
-button.mic-button {
-  background-color: $theme-primary-v6;
-  color: white;
-  box-shadow: 0 0.25rem 1.5rem rgba(0, 0, 0, 0.2);
-  // position: relative;
-  bottom: 0;
-  align-self: center;
-  // overflow: hidden;
-  z-index: 5;
-  // left: calc(100% - 3.25rem);
-
-  > * {
-    position: relative;
-  }
-
-  &:hover,
-  &:focus {
-    background-color: $theme-primary-v3;
-  }
-
-  &.is-listening {
-    background-color: red;
-
-    &:hover,
-    &:focus {
-      color: white;
-      background-color: rgb(180, 0, 0);
-
-      &::before,
-      &::after {
-        background: rgb(180, 0, 0);
-      }
-    }
-
-    &::before,
-    &::after {
-      @include before-or-after(
-        $h: 100%,
-        $w: 100%,
-        $bg: transparent,
-        $br: inherit
-      );
-      background: red;
-      animation: chatButtonRipple 1.75s infinite;
-    }
-
-    &::after {
-      animation-delay: 0.65s;
-    }
-
-    @keyframes chatButtonRipple {
-      from {
-        opacity: 1;
-        transform: scale(0.9);
-      }
-      to {
-        transform: scale(1.35);
-        opacity: 0;
-      }
-    }
-  }
-}footer.footer {
-  // @include debugger();
-  height: 4.25rem;
-  margin: unset;
-  padding: 0 0.25rem 0.25rem;
+  padding: 0 0.25rem;
 
   [class*='col'] {
     display: flex;
