--- a/src/styles/_Paper.scss
+++ b/src/styles/_Paper.scss
@@ -11,26 +11,4 @@
   border-radius: 1.75rem;
   background-color: white;
   box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.2);
-
-  header {
-    height: 5.75rem;
-    overflow: visible;
-    padding: 0.5rem;
-    position: relative;
-    z-index: 1;
-
-    .tool-bar__button {
-      border-radius: 0.5rem;
-    }
-  }
-
-  h1 {
-    font-size: 1.05rem;
-    color: $theme-primary-v5;
-    border-radius: 1.35rem 1.35rem 0.2rem 0.2rem;
-    text-align: center;
-    width: auto;
-    padding: 0.25rem 0.4rem;
-    background-color: rgba($prim-r, $prim-g, $prim-b, 0.2);
-  }
 }
