--- a/src/styles/_TextArea.scss
+++ b/src/styles/_TextArea.scss
@@ -3,7 +3,7 @@
   position: relative;
   overflow-y: auto;
   background: inherit;
-  max-height: calc(100% - 10rem);
+  max-height: calc(100% - 9.5rem);
   height: 100%;
   border-bottom: 0.0625rem solid $theme-primary-v7;
   border-top: 0.0625rem solid $theme-primary-v7;
