--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -5,27 +5,16 @@
     border-radius: 0;
     margin: 0;
     max-height: 100vh;
-
-    h1 {
-      border-radius: 0.25rem;
-    }
   }
 }
 
 @media screen and (max-width: 575px) {
   .font-color-select-container {
     .menu {
-      max-width: 6.5rem;
-      min-width: 5rem;
-    }
-  }
-
-  body.desktop.is-pc {
-    .font-color-select-container {
-      .menu {
-        max-width: 7rem;
-        min-width: 5rem;
-      }
+      max-width: unset;
+      min-width: unset;
+      right: 0.5rem;
+      left: 0.5rem;
     }
   }
 }
